# Adapting-Gemma-4-to-Brazilian-Portuguese

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  fix_base_task.py  fix_json.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ablations/: .gitkeep
configs/: cpt_main.yml  cpt_pilot.yml  ds_zero3.json  eval.yml  merge.yml  sft.yml
configs/ablations/: full_matrix.yaml
configs/data/: aurora_pt.yaml
configs/eval/: benchmarks.yaml
configs/model/: baselines.yaml  gemma4_26b.yaml  gemma4_31b.yaml  gemma4_e4b.yaml
configs/train/: cpt_main.yaml  cpt_pilot.yaml  dpo.yaml  sft.yaml
data/: .gitkeep
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_PIPELINE.md  EVALUATION_GUIDE.md  EVAL_PROTOCOL.md  EXPERIMENT_PLAN.md  GEMMA4_COMPLIANCE.md  SMOKE_TESTS.md  TRAINING_GUIDE.md  TRAIN_READY.md
model/: .gitkeep
reports/: .gitkeep
scripts/: run_ablations.sh  run_all.sh  run_baselines.sh  run_contamination_checks.sh  run_cpt_main.sh  run_cpt_pilot.sh  run_eval.sh  run_residual_merge.sh  run_sft.sh  run_tokenizer_audit.sh
src/: __init__.py  cli.py  preflight.py
src/data/: __init__.py  aurora_loader.py  cluster_dedup.py  contamination_checks.py  instruction_data_builder.py  make_splits.py  prompt_builders.py  quality_manifest.py  replay_mix_builder.py  tokenizer_audit.py
src/eval/: __init__.py  benchmark_runner.py  bootstrap_ci.py  metrics.py  prompt_templates.py  report_builder.py  stats_tests.py
src/eval/tasks/: __init__.py  assin2_rte.py  assin2_sts.py  base_task.py  bluex.py  boolq_pt.py  broverbs.py  capitu.py  copa_pt.py  donotanswer_pt.py  enem.py  hatebr.py  legalbench_br.py  lener_br.py  math_pt.py  mrpc_pt.py  oab_bench.py  publichearing_br.py  retention_en.py  rte_pt.py  tuguesice_pt.py  tweet_sentbr.py  xlsum_pt.py
src/train/: __init__.py  callbacks.py  cpt_trainer.py  dpo_trainer.py  peft_factories.py  residual_merge.py  sft_trainer.py
src/utils/: __init__.py  checkpointing.py  config_utils.py  hf_utils.py  logging_utils.py  seed.py
tests/: conftest.py  smoke_test.py  test_bootstrap.py  test_callbacks.py  test_checkpointing.py  test_config.py  test_contamination.py  test_data_pipeline.py  test_gemma4_compliance.py  test_golden.py  test_instruction_builder.py  test_logging_utils.py  test_metrics.py  test_parsing.py  test_prompt_templates.py  test_report_builder.py  test_residual_merge.py
tests/fixtures/: golden_enem.json  golden_parsing.json
