[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gemma4-ptbr"
version = "0.1.0"
description = "Adapting Google Gemma 4 to Brazilian Portuguese via Aurora-PT corpus"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Gemma4-PTBR Team"},
]
keywords = ["gemma", "llm", "portuguese", "nlp", "fine-tuning", "continued-pretraining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Core ML ──────────────────────────────────────────────
    "torch>=2.4.0",
    "transformers>=4.51.0",
    "accelerate>=1.6.0",
    "peft>=0.15.0",
    "trl>=0.18.0",
    "datasets>=3.6.0",
    "tokenizers>=0.21.0",
    "safetensors>=0.5.0",

    # ── Training infra ───────────────────────────────────────
    "deepspeed>=0.16.0",
    "bitsandbytes>=0.45.0",
    "wandb>=0.19.0",
    "tensorboard>=2.18.0",

    # ── Data quality ─────────────────────────────────────────
    "datasketch>=1.6.0",        # MinHash LSH for contamination
    "xxhash>=3.5.0",            # fast hashing
    "nltk>=3.9.0",              # word tokenization for fertility
    "ftfy>=6.3.0",              # text fixing / normalization
    "regex>=2024.0.0",          # advanced regex

    # ── Evaluation ───────────────────────────────────────────
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",

    # ── Reporting ────────────────────────────────────────────
    "jinja2>=3.1.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.0",

    # ── Config / env ─────────────────────────────────────────
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ipython>=8.0",
]
eval-harness = [
    "lm-eval>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/vfcarida/Adapting-Gemma-4-to-Brazilian-Portuguese"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
