[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma4-pt-br"
version = "0.2.0"
description = "Gemma 4 Portuguese Adaptation Research — Aurora-PT/NorBERTo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Research Team"}]

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
    "jsonlines>=4.0.0",
    "xxhash>=3.4.0",
    "datasketch>=1.6.0",
    "nltk>=3.8.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.5.0",
]
gpu = [
    "bitsandbytes>=0.44.0",
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
]
eval = [
    "vllm>=0.6.0",
    "bert-score>=0.3.13",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
monitoring = [
    "wandb>=0.18.0",
    "tensorboard>=2.16.0",
]
all = [
    "gemma4-pt-br[dev,gpu,eval,viz,monitoring]",
]

[project.scripts]
gemma4pt = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
    "smoke: marks smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled separately
